# DiffSpec-PBT-Apart-Research

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  slides.html
benchmark/01_sort/: impl.py  requirement.md  strategy.py
benchmark/01_sort/fixtures/: compound.py  gpt-oss.py  llama.py  qwen.py
benchmark/01_sort/responses/: compound.json  compound.reasoning.txt  gpt-oss.json  gpt-oss.reasoning.txt  llama.json  qwen.json
benchmark/02_dedup/: impl.py  requirement.md  strategy.py
benchmark/02_dedup/fixtures/: compound.py  gpt-oss.py  llama.py  qwen.py
benchmark/02_dedup/responses/: compound.json  compound.reasoning.txt  gpt-oss.json  (+3 more)
benchmark/03_binary_search/: impl.py  requirement.md  strategy.py
benchmark/04_kth_smallest/: impl.py  requirement.md  strategy.py
benchmark/05_merge_sorted/: impl.py  requirement.md  strategy.py
benchmark/06_tokenizer_truncate/: impl.py  requirement.md  strategy.py
benchmark/07_prompt_priority/: impl.py  requirement.md  strategy.py
benchmark/08_permission_check/: impl.py  requirement.md  strategy.py
benchmark/09_rate_limit/: impl.py  requirement.md  strategy.py
benchmark/10_path_sanitize/: impl.py  requirement.md  strategy.py
benchmark/11_brd_tiebreaker/: impl.py  requirement.md  strategy.py
docs/: 2026-05-25-diffspec-pbt-design.md
evals/: results.json  run_evals.py
paper/: main.tex  references.bib
scripts/: gen_fixtures.sh
src/diffspec/: __init__.py  classify.py  cli.py  differ.py  llm.py  report.py  specs.py
tests/: test_classify.py  test_differ.py  test_llm.py  test_specs.py
(+82 files in other folders)
