[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diffspec-pbt"
version = "0.1.0"
description = "Validating LLM-generated formal specifications via differential property-based testing"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Fatimah Emad Eldin", email = "Fatimah@trouve.works" },
]
requires-python = ">=3.10"
dependencies = [
    "hypothesis>=6.92",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]
live = [
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.scripts]
diffspec = "diffspec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
